Refactor + adding UseConcMarkSweepGC test